source/sass/_forms.scss
fieldset {
  margin: 0 0 ma-spacing(1);
  padding: ma-spacing(1) 0;
  border: none;
  &:last-of-type {
    margin-bottom: 0;
  }
}

legend {
  margin: 0 auto;
}

input,
label,
textarea {
  display: block;
}

label {
  @include tiny-header(left);
  abbr {
    display: none;
  }
}

td {
  label {
    margin-bottom: 0;
  }
}

#{$all-text-inputs},
select[multiple=multiple],
select,
textarea {
  border: $base-border;
  border-radius: $base-border-radius * 4;
  box-shadow: $form-box-shadow;
  box-sizing: border-box;
  margin-bottom: ma-spacing(1);
  padding: 0 ($base-line-height / 2);
  transition: border-color;
  width: 100%;
  font-family: $base-font-family;
  font-size: $base-font-size;

  &:hover {
    border-color: darken($base-border-color, 10%);
  }
  &:focus {
    border-color: $action-color;
    box-shadow: $form-box-shadow-focus;
    outline: none;
  }
}

#{$all-text-inputs} {
  line-height: $base-line-height;
  height: $base-line-height * 2;
}

textarea {
  resize: none;
  height: ma-spacing(8);
  padding-top: $base-line-height;
  overflow-y: scroll;
  line-height: $base-line-height;
}

input[type="search"] {
  @include appearance(none);
}

input[type="checkbox"],
input[type="radio"] {
  display: inline;
  margin-right: ma-spacing(1) / 2;
}

legend {
  span {
    line-height: $base-line-height;
    letter-spacing: 0.2em;
    text-transform: uppercase;
    text-rendering: optimizeLegibility;
    font-weight: 500;
    margin: 0 0 $base-line-height;
    @include ma-header(1);
    color: $brand-primary-color;
  }
}

input[type="file"] {
  padding-bottom: ma-spacing(1);
  width: 100%;
}

input[type="submit"] {
  border-color: $brand-primary-color;
}

select {
  margin-bottom: ma-spacing(1);
  max-width: 100%;
  width: auto;
}

// Alternative form color on darker background
form.alt {
  #{$all-text-inputs},
  select[multiple=multiple],
  textarea {
    background: transparent;
    border: $base-border;
    color: $alt-font-color;
  }
  input[type="submit"] {
    border: $base-border;
    color: $alt-font-color;
  }
}


.input-success {
  color: $success;
}
.input-warning {
  color: $warning;
}
.input-feedback {
  margin-top: -1 * $base-line-height / 2;
  &:last-child {
    margin-bottom: $base-line-height;
  }
}
.input-hint {
  text-align: left;
  .small {
    display: block;
    margin-bottom: -1 * $base-line-height / 2;
  }
}

.input-row {
  max-width: $paragraph-max-width + (2 * $base-spacing);
  padding-right: $base-spacing;
  padding-left: $base-spacing;
  margin: 0 auto;

  .input-hint {
    margin: 0 0 $base-spacing;
  }

  &--centered {
    text-align: center;

    label {
      text-align: center;
    }
  }
}

form {
  .button-row p {
    text-align: center;
  }
}

.intl-tel-input {
  margin-bottom: ma-spacing(1);
  .selected-flag:focus {
    outline: none;
  }

  .country-list {
    border-radius: $base-border-radius * 4;
    border-width: 2px;
    margin: -1px 0 0 -1px;
    border-top-right-radius: 0;
    border-color: $light-gray;
    box-shadow: 1px 2px 2px 0px rgba(0,0,0,0.2);
  }
}

